@@ -114,10 +114,12 @@ const char**
 module_list_avail(void)
 {
         /* these are the modules available */
-        static const char* names[] = {"iterator", "validator", 
+        static const char* names[] = {
 #ifdef WITH_PYTHONMODULE
 		"python", 
 #endif
+		"validator", 
+		"iterator", 
 		NULL};
 	return names;
 }
@@ -129,11 +131,12 @@ typedef struct module_func_block* (*fbgetfunctype)(void);
 static fbgetfunctype*
 module_funcs_avail(void)
 {
-        static struct module_func_block* (*fb[])(void) = 
-                {&iter_get_funcblock, &val_get_funcblock, 
+        static struct module_func_block* (*fb[])(void) = {
 #ifdef WITH_PYTHONMODULE
 		&pythonmod_get_funcblock, 
 #endif
+		&val_get_funcblock, 
+		&iter_get_funcblock, 
 		NULL};
 	return fb;
 }
